reworked nbt, console can now log objects, change naming scheme for generates libs, cleanup